Added login logic

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,4 @@
 <main>
-  <app-atms (atmSelected)="onAtmSelected($event)"></app-atms>
 
-  <app-map [centerCoordinates]="selectedAtmCoordinates"></app-map>
-   <!-- <router-outlet></router-outlet> -->
+   <router-outlet></router-outlet>
 </main>
