--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,3 @@
-<p>home works!</p>
+ <app-atms (atmSelected)="onAtmSelected($event)"></app-atms>
+
+<app-map [centerCoordinates]="selectedAtmCoordinates"></app-map>
