--- a/src/app/map/map.component.css
+++ b/src/app/map/map.component.css
@@ -1,7 +1,30 @@
 .map-container {
-  width: 600px;
-  height: 400px;
+  width: 100%; 
+  height: 500px; 
   background-color: #f0f0f0;
-  border-radius: 15px;
+  border-radius: 12px; 
   overflow: hidden;
+  display: block;
+}
+
+/* OpenLayers CSS overrides  */
+.ol-attribution.ol-uncollapsible {
+  display: none !important;
+}
+
+.ol-attribution ul li {
+  font-size: 0 !important;
+  visibility: hidden;
+  line-height: 0 !important;
+  padding: 0 !important;
+}
+
+.ol-attribution button {
+  display: none !important;
+}
+
+.ol-control, .ol-unselectable {
+  border: none !important;
+  background-color: transparent !important;
+  box-shadow: none !important;
 }
