--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,7 +1,7 @@
 <div class="home-container">
   <header class="page-header">
     <div class="user-info">
-      <span *ngIf="username">Dobrodošli, <strong>{{ username }}</strong>!</span>
+      <span *ngIf="username">Pregled bankomata!</span>
     </div>
     <button (click)="onLogout()" class="logout-button">Odjavi se</button>
   </header>
